--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,16 +35,17 @@ percent-encoding = { version = "2.1.0", optional = true }
 prometheus = "0.10.0"
 proxy-protocol = {version = "0.1.1"}
 rand = "0.7.3"
-regex = "1.3.9"
+regex = "1.4.1"
 rustls = "0.18.1"
-serde = { version = "1.0.116", optional = true, features = ["derive"] }
-serde_json = { version = "1.0.58", optional = true }
+serde = { version = "1.0.117", optional = true, features = ["derive"] }
+serde_json = { version = "1.0.59", optional = true }
 slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.0.0"
 thiserror = "1.0.21"
-tokio = { version = "0.2.22", features = ["rt-core", "net", "sync", "io-util", "macros", "time", "fs", "blocking"]}
-tokio-rustls = { version = "0.14.1" }
-tokio-util = { version = "0.3.1", features=["codec", "compat"] }
+tokio = { version = "0.3.0", features = ["rt", "net", "sync", "io-util", "macros", "time", "fs"]}
+tokio-compat-02 = { version = "0.1.0", optional = true}
+tokio-rustls = { version = "0.20.0" }
+tokio-util = { version = "0.4.0", features=["codec", "compat"] }
 tracing = "0.1.21"
 tracing-attributes = "0.1.11"
 tracing-futures = { version = "0.2.4", features = ["std", "std-future", "futures-03"]}
@@ -55,21 +56,21 @@ yup-oauth2 = {version = "4.1.2", optional = true}
 pam-auth = { package = "pam", version = "0.7.0", optional = true }
 
 [dev-dependencies]
-async_ftp = "4.0.1"
+async_ftp = "4.0.2"
 clap = "2.33.3"
 log = "0.4.11"
 pretty_assertions = "0.6.1"
 pretty_env_logger = "0.4.0"
 tempfile = "3.1.0"
-tokio = { version = "0.2.22", features = ["rt-threaded"]}
+tokio = { version = "0.3.0", features = ["rt-multi-thread"]}
 tracing-subscriber = "0.2.13"
 
 [features]
 pam_auth = ["pam-auth"]
-rest_auth = ["hyper", "percent-encoding", "serde", "serde_json"]
+rest_auth = ["hyper", "percent-encoding", "serde", "serde_json", "tokio-compat-02"]
 jsonfile_auth = ["serde", "serde_json"]
-cloud_storage = ["oauth2", "mime", "percent-encoding", "hyper", "serde", "serde_json"]
-oauth2 = ["yup-oauth2", "hyper-rustls"]
+cloud_storage = ["oauth2", "mime", "percent-encoding", "hyper", "serde", "serde_json", "tokio-compat-02"]
+oauth2 = ["yup-oauth2", "hyper-rustls", "tokio-compat-02"]
 
 [[example]]
 name = "gcs"
