--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,36 +21,38 @@ edition = "2018"
 
 [dependencies]
 async-trait = "0.1.42"
-bytes = "0.5.6"
+bytes = "1.0"
+bytes05 = { package="bytes", version= "0.5" }
 chrono = {version = "0.4.19", features = ["serde"]}
 derive_more = { version = "0.99.11", features = ["display"] }
 futures = {version = "0.3.7", features = ["std"]}
-hyper = { version = "0.13.9", optional = true, features= ["runtime", "stream"]}
-hyper-rustls = {version = "0.21.0", optional = true}
-itertools = "0.9.0"
+hyper = { version = "0.14.1", optional = true, features= ["client", "runtime", "stream", "http1"]}
+hyper-rustls = { version = "0.22.1", optional = true }
+itertools = "0.10.0"
 lazy_static = "1.4.0"
 mime = {version = "0.3.16", optional = true}
 path_abs = "0.5.0"
 percent-encoding = { version = "2.1.0", optional = true }
 prometheus = "0.10.0"
 proxy-protocol = {version = "0.1.1"}
-rand = "0.7.3"
+rand = "0.8.0"
 regex = "1.4.2"
 rustls = "0.19.0"
 serde = { version = "1.0.118", optional = true, features = ["derive"] }
 serde_json = { version = "1.0.60", optional = true }
 slog = { version = "2.5.2", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.1.0"
-thiserror = "1.0.22"
-tokio = { version = "0.3.5", features = ["rt", "net", "sync", "io-util", "macros", "time", "fs"]}
-tokio-compat-02 = { version = "0.1.2", optional = true}
-tokio-rustls = { version = "0.21.1" }
-tokio-util = { version = "0.4.0", features=["codec", "compat"] }
+thiserror = "1.0.23"
+tokio = { version = "1.0.1", features = ["rt", "net", "sync", "io-util", "macros", "time", "fs"]}
+tokio-stream = "0.1.0"
+tokio-rustls = { version = "0.22.0" }
+tokio-util = { version = "0.6.0", features=["codec", "compat"] }
 tracing = "0.1.22"
 tracing-attributes = "0.1.11"
 tracing-futures = { version = "0.2.4", features = ["std", "std-future", "futures-03"]}
 uuid = { version = "0.8.1", features = ["v4"] }
-yup-oauth2 = {version = "4.1.3", optional = true}
+yup-oauth2 = {version = "5.0.1", optional = true}
+
 
 [target.'cfg(unix)'.dependencies]
 pam-auth = { package = "pam", version = "0.7.0", optional = true }
@@ -63,16 +65,18 @@ slog-async = "2.3.0"
 pretty_assertions = "0.6.1"
 pretty_env_logger = "0.4.0"
 tempfile = "3.1.0"
-tokio = { version = "0.3.5", features = ["rt-multi-thread"]}
+tokio = { version = "1.0.1", features = ["rt-multi-thread"]}
 tracing-subscriber = "0.2.15"
 more-asserts = "0.2.1"
+tokio-compat-02 = { version = "0.1.2"}
+
 
 [features]
 pam_auth = ["pam-auth"]
-rest_auth = ["hyper", "percent-encoding", "serde", "serde_json", "tokio-compat-02"]
+rest_auth = ["hyper", "percent-encoding", "serde", "serde_json"]
 jsonfile_auth = ["serde", "serde_json"]
-cloud_storage = ["oauth2", "mime", "percent-encoding", "hyper", "serde", "serde_json", "tokio-compat-02"]
-oauth2 = ["yup-oauth2", "hyper-rustls", "tokio-compat-02"]
+cloud_storage = ["oauth2", "mime", "percent-encoding", "hyper", "serde", "serde_json"]
+oauth2 = ["yup-oauth2", "hyper-rustls"]
 
 [[example]]
 name = "gcs"
