--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libunftp"
-version = "0.16.0"
+version = "0.16.1"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -25,7 +25,7 @@ bytes = "1.0.1"
 chrono = {version = "0.4.19", features = ["serde"]}
 derive_more = { version = "0.99.11", features = ["display"] }
 futures = {version = "0.3.12", features = ["std"]}
-hyper = { version = "0.14.2", optional = true, features= ["client", "runtime", "stream", "http1"]}
+hyper = { version = "0.14.4", optional = true, features= ["client", "runtime", "stream", "http1"]}
 hyper-rustls = { version = "0.22.1", optional = true }
 itertools = "0.10.0"
 lazy_static = "1.4.0"
@@ -33,24 +33,24 @@ mime = {version = "0.3.16", optional = true}
 path_abs = "0.5.0"
 percent-encoding = { version = "2.1.0", optional = true }
 prometheus = "0.11.0"
-proxy-protocol = {git = "https://github.com/bolcom/proxy-protocol", branch = "nonius/upgrade-bytes"}
+proxy-protocol = "0.2.0"
 rand = "0.8.3"
 regex = "1.4.3"
 rustls = "0.19.0"
 serde = { version = "1.0.123", optional = true, features = ["derive"] }
-serde_json = { version = "1.0.61", optional = true }
+serde_json = { version = "1.0.62", optional = true }
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.1.0"
 thiserror = "1.0.23"
-tokio = { version = "1.1.1", features = ["rt", "net", "sync", "io-util", "macros", "time", "fs"]}
-tokio-stream = "0.1.2"
+tokio = { version = "1.2.0", features = ["rt", "net", "sync", "io-util", "macros", "time", "fs"]}
+tokio-stream = "0.1.3"
 tokio-rustls = { version = "0.22.0" }
 tokio-util = { version = "0.6.3", features=["codec", "compat"] }
 tracing = "0.1.23"
 tracing-attributes = "0.1.12"
 tracing-futures = { version = "0.2.4", features = ["std", "std-future", "futures-03"]}
 uuid = { version = "0.8.2", features = ["v4"] }
-yup-oauth2 = {version = "5.0.2", optional = true}
+yup-oauth2 = {version = "5.0.3", optional = true}
 
 [target.'cfg(unix)'.dependencies]
 pam-auth = { package = "pam", version = "0.7.0", optional = true }
@@ -58,12 +58,12 @@ pam-auth = { package = "pam", version = "0.7.0", optional = true }
 [dev-dependencies]
 async_ftp = "5.0.0"
 clap = "2.33.3"
-slog-term = "2.6.0"
+slog-term = "2.7.0"
 slog-async = "2.6.0"
 pretty_assertions = "0.6.1"
 pretty_env_logger = "0.4.0"
 tempfile = "3.2.0"
-tokio = { version = "1.0.2", features = ["rt-multi-thread"]}
+tokio = { version = "1.2.0", features = ["rt-multi-thread"]}
 tracing-subscriber = "0.2.15"
 more-asserts = "0.2.1"
 
