--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,12 @@ keywords = ["ftp", "ftps"]
 categories = ["network-programming"]
 edition = "2018"
 
+[workspace]
+
+members = [
+    "crates/unftp-sbe-gcs",
+]
+
 [dependencies]
 async-trait = "0.1.42"
 bytes = "1.0.1"
@@ -50,7 +56,6 @@ tracing = "0.1.23"
 tracing-attributes = "0.1.12"
 tracing-futures = { version = "0.2.4", features = ["std", "std-future", "futures-03"]}
 uuid = { version = "0.8.2", features = ["v4"] }
-yup-oauth2 = {version = "5.0.3", optional = true}
 
 [target.'cfg(unix)'.dependencies]
 pam-auth = { package = "pam", version = "0.7.0", optional = true }
@@ -66,18 +71,13 @@ tempfile = "3.2.0"
 tokio = { version = "1.2.0", features = ["rt-multi-thread"]}
 tracing-subscriber = "0.2.15"
 more-asserts = "0.2.1"
+unftp-sbe-gcs = { path = "../libunftp/crates/unftp-sbe-gcs"}
 
 
 [features]
 pam_auth = ["pam-auth"]
 rest_auth = ["hyper", "percent-encoding", "serde", "serde_json"]
 jsonfile_auth = ["serde", "serde_json"]
-cloud_storage = ["oauth2", "mime", "percent-encoding", "hyper", "serde", "serde_json"]
-oauth2 = ["yup-oauth2", "hyper-rustls"]
-
-[[example]]
-name = "gcs"
-required-features = ["cloud_storage"]
 
 [[example]]
 name = "rest"
@@ -86,11 +86,6 @@ required-features = ["rest_auth"]
 [[example]]
 name = "jsonfile_auth"
 required-features = ["jsonfile_auth"]
-
-[[test]]
-name = "gcs"
-path = "tests/gcs.rs"
-required-features = ["cloud_storage"]
 
 [profile.release]
 lto = "fat"
