--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ edition = "2018"
 members = [
     "crates/unftp-sbe-gcs",
     "crates/unftp-auth-rest",
+    "crates/unftp-auth-jsonfile"
 ]
 
 [dependencies]
@@ -40,8 +41,6 @@ prometheus = "0.11.0"
 proxy-protocol = "0.2.0"
 rand = "0.8.3"
 rustls = "0.19.0"
-serde = { version = "1.0.123", optional = true, features = ["derive"] }
-serde_json = { version = "1.0.62", optional = true }
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.1.0"
 thiserror = "1.0.23"
@@ -73,11 +72,6 @@ pretty_env_logger = "0.4.0"
 
 [features]
 pam_auth = ["pam-auth"]
-jsonfile_auth = ["serde", "serde_json"]
-
-[[example]]
-name = "jsonfile_auth"
-required-features = ["jsonfile_auth"]
 
 [profile.release]
 lto = "fat"
