--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,10 +22,11 @@ edition = "2018"
 [workspace]
 
 members = [
-    "crates/unftp-sbe-gcs",
-    "crates/unftp-auth-rest",
     "crates/unftp-auth-jsonfile",
-    "crates/unftp-auth-pam"
+    "crates/unftp-auth-pam",
+    "crates/unftp-auth-rest",
+    "crates/unftp-sbe-fs",
+    "crates/unftp-sbe-gcs"
 ]
 
 [dependencies]
@@ -36,8 +37,6 @@ derive_more = { version = "0.99.11", features = ["display"] }
 futures = {version = "0.3.12", features = ["std"]}
 itertools = "0.10.0"
 lazy_static = "1.4.0"
-mime = {version = "0.3.16", optional = true}
-path_abs = "0.5.0"
 prometheus = "0.11.0"
 proxy-protocol = "0.2.0"
 rand = "0.8.3"
@@ -55,23 +54,6 @@ tracing-futures = { version = "0.2.4", features = ["std", "std-future", "futures
 uuid = { version = "0.8.2", features = ["v4"] }
 
 [dev-dependencies]
-async_ftp = "5.0.0"
-clap = "2.33.3"
-slog-term = "2.8.0"
-slog-async = "2.6.0"
 pretty_assertions = "0.6.1"
-tempfile = "3.2.0"
 tokio = { version = "1.2.0", features = ["rt-multi-thread"]}
-tracing-subscriber = "0.2.15"
-more-asserts = "0.2.1"
-unftp-sbe-gcs = { path = "../libunftp/crates/unftp-sbe-gcs"}
-unftp-auth-rest = { path = "../libunftp/crates/unftp-auth-rest"}
-pretty_env_logger = "0.4.0"
-
-[profile.release]
-lto = "fat"
-codegen-units = 1
-
-[package.metadata.docs.rs]
-all-features = true
-
+unftp-sbe-fs = { path = "../libunftp/crates/unftp-sbe-fs"}
