--- a/crates/unftp-auth-jsonfile/Cargo.toml
+++ b/crates/unftp-auth-jsonfile/Cargo.toml
@@ -19,6 +19,7 @@ readme = "README.md"
 [dependencies]
 async-trait = "0.1.42"
 libunftp = { version="0.16.2", path="../../"}
+unftp-sbe-fs = { version="0.1", path="../unftp-sbe-fs"}
 serde = { version = "1.0.123", features = ["derive"] }
 serde_json = { version = "1.0.62" }
 tokio = { version = "1.2.0", features = ["rt", "time"]}
