--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ os:
   - windows
 
 before_script:
-  - if [[ $TRAVIS_OS_NAME == "osx" ]]; then export TEST_FEATURES="--features jsonfile_auth"; else export TEST_FEATURES="--all-features"; fi
+  - if [[ $TRAVIS_OS_NAME == "osx" ]]; then export TEST_FEATURES=""; else export TEST_FEATURES="--all-features"; fi
   - rm -rf "$TRAVIS_HOME/.cargo/registry/src"
   - rustup component add rustfmt
   - if [ $TRAVIS_RUST_VERSION != 'nightly' ]; then rustup component add clippy; else rustup component add clippy --toolchain=nightly || cargo install --git https://github.com/rust-lang/rust-clippy/ --force clippy; fi
