--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,12 +31,14 @@ members = [
 
 [dependencies]
 async-trait = "0.1.42"
+bitflags = "1.2.1"
 bytes = "1.0.1"
 chrono = {version = "0.4.19", features = ["serde"]}
 derive_more = { version = "0.99.11", features = ["display"] }
 futures = {version = "0.3.12", features = ["std"]}
 itertools = "0.10.0"
 lazy_static = "1.4.0"
+moka = "0.3.0"
 prometheus = "0.12.0"
 proxy-protocol = "0.3.0"
 rand = "0.8.3"
