--- a/crates/unftp-auth-jsonfile/Cargo.toml
+++ b/crates/unftp-auth-jsonfile/Cargo.toml
@@ -28,6 +28,7 @@ tracing = "0.1.25"
 tracing-attributes = "0.1.15"
 ring = "0.16.20"
 base64 = "0.13.0"
+bytes = "1.0.1"
 
 [dev-dependencies]
 pretty_env_logger = "0.4.0"
