--- a/crates/unftp-sbe-fs/Cargo.toml
+++ b/crates/unftp-sbe-fs/Cargo.toml
@@ -27,6 +27,7 @@ tokio = { version = "1.5.0", features = ["rt", "net", "sync", "io-util", "macros
 tokio-stream = "0.1.5"
 futures = {version = "0.3.14", features = ["std"]}
 path_abs = "0.5.0"
+rust-crypto = "^0.2"
 
 [dev-dependencies]
 async_ftp = "5.0.0"
