--- a/crates/unftp-auth-jsonfile/Cargo.toml
+++ b/crates/unftp-auth-jsonfile/Cargo.toml
@@ -30,6 +30,8 @@ ring = "0.16.20"
 base64 = "0.13.0"
 bytes = "1.0.1"
 valid = "0.3.1"
+iprange = "0.6.4"
+ipnet = "2.3.0"
 
 [dev-dependencies]
 pretty_env_logger = "0.4.0"
