--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,13 +60,13 @@ rustls = { version = "0.23.35", default-features = false }
 rustls-pemfile = "2.2.0"
 slog = { version = "2.8.2", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.1.1"
-thiserror = "2.0.17"
-tokio = { version = "1.48.0", features = ["macros", "rt", "net", "process", "sync", "io-util", "time"] }
-tokio-rustls = "0.26.4"
-tokio-util = { version = "0.7.17", features = ["codec"] }
-tracing = { version = "0.1.44", default-features = false }
-tracing-attributes = "0.1.31"
-uuid = { version = "1.19.0", features = ["v4"] }
+thiserror = "2.0.12"
+tokio = { version = "1.44.2", features = ["macros", "rt", "net", "process", "sync", "io-util", "time"] }
+tokio-rustls = { version = "0.26.2", default-features = false }
+tokio-util = { version = "0.7.15", features = ["codec"] }
+tracing = { version = "0.1.41", default-features = false }
+tracing-attributes = "0.1.28"
+uuid = { version = "1.16.0", features = ["v4"] }
 x509-parser = "0.17.0"
 dashmap = "6.1.0"
 libc = "0.2"
