--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -55,6 +55,8 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: -Dwarnings
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
@@ -70,7 +72,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y libpam-dev
       - name: Run tests
         run: >
-          cargo test 
+          cargo test
           --verbose --workspace --exclude 'unftp-sbe-gcs*'
       - name: Doc tests
         run: cargo test --doc --workspace
@@ -78,6 +80,18 @@ jobs:
         run: cargo build --examples --workspace
       - name: Build Code
         run: cargo build  --workspace
+      - name: Check compilation without default features (workspace)
+        run: cargo check --workspace --no-default-features --features aws_lc_rs
+      - name: Check compilation without default features (libunftp only)
+        run: cargo check --no-default-features --features aws_lc_rs
+      - name: Check compilation with all features (workspace)
+        run: cargo check --workspace --no-default-features --features all
+      - name: Check compilation with all features (libunftp only)
+        run: cargo check --no-default-features --features all
+      - name: Check compilation with 'prometheus' feature only
+        run: cargo check --no-default-features --features aws_lc_rs,prometheus
+      - name: Check compilation with 'proxy_protocol' feature only
+        run: cargo check --no-default-features --features aws_lc_rs,proxy_protocol
       - name: Build Docs
         run: cargo doc --workspace --no-deps
 
