--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,8 +39,11 @@ all = "deny"
 [features]
 ring = ["rustls/ring", "rustls/logging", "rustls/std", "rustls/tls12"]
 aws_lc_rs = ["rustls/aws_lc_rs", "rustls/logging", "rustls/std", "rustls/tls12"]
+prometheus = ["dep:prometheus"]
+proxy_protocol = ["dep:proxy-protocol"]
 experimental = []
 default = ["aws_lc_rs"]
+all = ["aws_lc_rs", "prometheus", "proxy_protocol"]
 
 [dependencies]
 async-trait = "=0.1.88"
@@ -54,8 +57,8 @@ lazy_static = "1.5.0"
 md-5 = "0.10.6"
 moka = { version = "0.12.11", default-features = false, features = ["sync"] }
 nix = { version = "0.29.0", default-features = false, features = ["fs"] }
-prometheus = { version = "0.14.0", default-features = false }
-proxy-protocol = "0.5.0"
+prometheus = { version = "0.14.0", default-features = false, optional = true }
+proxy-protocol = { version = "0.5.0", optional = true }
 rustls = { version = "0.23.35", default-features = false }
 slog = { version = "2.8.2", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.1.1"
@@ -71,6 +74,7 @@ dashmap = "6.1.0"
 libc = "0.2"
 
 [dev-dependencies]
+libunftp = { path = ".", features = ["all"] }
 pretty_assertions = "1.4.1"
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 unftp-sbe-fs = { path = "../libunftp/crates/unftp-sbe-fs" }
