--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libunftp"
-version = "0.21.0" # remember to update html_root_url
+version = "0.21.1" # remember to update html_root_url
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -42,7 +42,7 @@ aws_lc_rs = ["rustls/aws_lc_rs", "rustls/logging", "rustls/std", "rustls/tls12"]
 prometheus = ["dep:prometheus"]
 proxy_protocol = ["dep:proxy-protocol"]
 experimental = []
-default = ["aws_lc_rs"]
+default = ["aws_lc_rs", "prometheus", "proxy_protocol"]
 all = ["aws_lc_rs", "prometheus", "proxy_protocol"]
 
 [dependencies]
@@ -50,13 +50,13 @@ async-trait = "=0.1.88"
 bitflags = "2.10.0"
 bytes = "1.11.0"
 chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
-derive_more = { version = "2.1.0", features = ["display"] }
+derive_more = { version = "2.1.1", features = ["display"] }
 futures-util = { version = "0.3.31", default-features = false, features = ["alloc", "sink"] }
 getrandom = "0.3.4"
 lazy_static = "1.5.0"
 md-5 = "0.10.6"
-moka = { version = "0.12.11", default-features = false, features = ["sync"] }
-nix = { version = "0.29.0", default-features = false, features = ["fs"] }
+moka = { version = "0.12.12", default-features = false, features = ["sync"] }
+nix = { version = "0.30.1", default-features = false, features = ["fs"] }
 prometheus = { version = "0.14.0", default-features = false, optional = true }
 proxy-protocol = { version = "0.5.0", optional = true }
 rustls = { version = "0.23.35", default-features = false }
@@ -69,12 +69,12 @@ tokio-util = { version = "0.7.17", features = ["codec"] }
 tracing = { version = "0.1.44", default-features = false }
 tracing-attributes = "0.1.31"
 uuid = { version = "1.19.0", features = ["v4"] }
-x509-parser = "0.17.0"
+x509-parser = "0.18.0"
 dashmap = "6.1.0"
 libc = "0.2"
 
 [dev-dependencies]
-libunftp = { path = ".", features = ["all"] }
+libunftp = { path = "." }
 pretty_assertions = "1.4.1"
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 unftp-sbe-fs = { path = "../libunftp/crates/unftp-sbe-fs" }
