--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,28 @@ missing_docs = "deny"
 [workspace.lints.clippy]
 all = "deny"
 
+[workspace.dependencies]
+async-trait = "0.1.88"
+base64 = "0.22.1"
+bytes = "1.11.1"
+chrono = { version = "0.4.43", default-features = false }
+futures = { version = "0.3.31", default-features = false, features = ["std"] }
+http-body-util = "0.1.3"
+hyper = { version = "1.8.1", features = ["client", "http1"] }
+hyper-rustls = "0.27.7"
+hyper-util = "0.1.20"
+lazy_static = "1.5.0"
+libunftp = { version = "0.22.0", path = ".", default-features = false }
+percent-encoding = "2.3.2"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
+tokio = { version = "1.49.0" }
+tokio-stream = "0.1.18"
+tokio-util = { version = "0.7.18" }
+tracing = { version = "0.1.44", default-features = false }
+tracing-attributes = "0.1.31"
+getrandom = "0.3.4"
+
 [features]
 ring = ["rustls/ring", "rustls/logging", "rustls/std", "rustls/tls12"]
 aws_lc_rs = ["rustls/aws_lc_rs", "rustls/logging", "rustls/std", "rustls/tls12"]
@@ -46,14 +68,14 @@ default = ["aws_lc_rs", "prometheus", "proxy_protocol"]
 all = ["aws_lc_rs", "prometheus", "proxy_protocol"]
 
 [dependencies]
-async-trait = "0.1.88"
+async-trait.workspace = true
 bitflags = "2.10.0"
-bytes = "1.11.1"
-chrono = { version = "0.4.43", default-features = false, features = ["clock", "std"] }
+bytes.workspace = true
+chrono = { workspace = true, features = ["clock", "std"] }
 derive_more = { version = "2.1.1", features = ["display"] }
 futures-util = { version = "0.3.31", default-features = false, features = ["alloc", "sink"] }
-getrandom = "0.3.4"
-lazy_static = "1.5.0"
+getrandom.workspace = true
+lazy_static.workspace = true
 md-5 = "0.10.6"
 moka = { version = "0.12.13", default-features = false, features = ["sync"] }
 nix = { version = "0.30.1", default-features = false, features = ["fs"] }
@@ -63,11 +85,11 @@ rustls = { version = "0.23.36", default-features = false }
 slog = { version = "2.8.2", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.1.1"
 thiserror = "2.0.18"
-tokio = { version = "1.49.0", features = ["macros", "rt", "net", "process", "sync", "io-util", "time"] }
+tokio = { workspace = true, features = ["macros", "rt", "net", "process", "sync", "io-util", "time"] }
 tokio-rustls = { version = "0.26.4", default-features = false }
-tokio-util = { version = "0.7.18", features = ["codec"] }
-tracing = { version = "0.1.44", default-features = false }
-tracing-attributes = "0.1.31"
+tokio-util = { workspace = true, features = ["codec"] }
+tracing.workspace = true
+tracing-attributes.workspace = true
 uuid = { version = "1.20.0", features = ["v4"] }
 x509-parser = "0.18.1"
 dashmap = "6.1.0"
@@ -76,7 +98,7 @@ libc = "0.2"
 [dev-dependencies]
 libunftp = { path = "." }
 pretty_assertions = "1.4.1"
-tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 unftp-sbe-fs = { path = "../libunftp/crates/unftp-sbe-fs" }
 
 [lints]
