--- a/crates/unftp-auth-jsonfile/Cargo.toml
+++ b/crates/unftp-auth-jsonfile/Cargo.toml
@@ -23,24 +23,24 @@ aws_lc_rs = ["libunftp/aws_lc_rs"]
 ring = ["libunftp/ring"]
 
 [dependencies]
-async-trait = "0.1.88"
-base64 = "0.22.1"
-bytes = "1.11.1"
+async-trait.workspace = true
+base64.workspace = true
+bytes.workspace = true
 ipnet = "2.11.0"
 iprange = "0.6.7"
-libunftp = { version = "0.22.0", path = "../../", default-features = false }
+libunftp.workspace = true
 ring = "0.17.14"
-serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.149"
-tokio = { version = "1.49.0", features = ["rt", "time"] }
-tracing = { version = "0.1.44", default-features = false }
-tracing-attributes = "0.1.31"
+serde.workspace = true
+serde_json.workspace = true
+tokio = { workspace = true, features = ["rt", "time"] }
+tracing.workspace = true
+tracing-attributes.workspace = true
 valid = "0.3.1"
 flate2 = "1.1.9"
 
 [dev-dependencies]
 pretty_env_logger = "0.5.0"
-tokio = { version = "1.49.0", features = ["macros"] }
+tokio = { workspace = true, features = ["macros"] }
 unftp-sbe-fs = { version = "0.3.0", path = "../unftp-sbe-fs" }
 
 [lints]
