--- a/crates/unftp-auth-rest/Cargo.toml
+++ b/crates/unftp-auth-rest/Cargo.toml
@@ -18,24 +18,23 @@ repository = "https://github.com/bolcom/libunftp/tree/hannes/crates/unftp-auth-r
 readme = "README.md"
 
 [dependencies]
-async-trait = "0.1.88"
-http-body-util = "0.1.3"
-hyper = { version = "1.8.1", features = ["client", "http1"] }
-hyper-rustls = "0.27.7"
-hyper-util = "0.1.20"
-libunftp = { version = "0.22.0", path = "../../", default-features = false }
-percent-encoding = "2.3.2"
+async-trait.workspace = true
+http-body-util.workspace = true
+hyper.workspace = true
+hyper-rustls.workspace = true
+hyper-util.workspace = true
+libunftp.workspace = true
+percent-encoding.workspace = true
 regex = "1.12.3"
-serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.149"
-tokio = { version = "1.49.0", features = ["rt", "net", "sync", "io-util", "time"] }
-tracing = { version = "0.1.44", default-features = false }
-tracing-attributes = "0.1.31"
-
+serde.workspace = true
+serde_json.workspace = true
+tokio = { workspace = true, features = ["rt", "net", "sync", "io-util", "time"] }
+tracing.workspace = true
+tracing-attributes.workspace = true
 
 [dev-dependencies]
 pretty_env_logger = "0.5.0"
-tokio = { version = "1.49.0", features = ["macros"] }
+tokio = { workspace = true, features = ["macros"] }
 unftp-sbe-fs = { version = "0.3.0", path = "../unftp-sbe-fs" }
 
 [lints]
