--- a/crates/unftp-sbe-gcs/Cargo.toml
+++ b/crates/unftp-sbe-gcs/Cargo.toml
@@ -18,32 +18,32 @@ repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-gc
 readme = "README.md"
 
 [dependencies]
-async-trait = "0.1.88"
-base64 = "0.22.1"
-bytes = "1.11.1"
-chrono = { version = "0.4.43", default-features = false, features = ["std", "serde"] }
-futures = { version = "0.3.31", default-features = false, features = ["std"] }
-http-body-util = "0.1.3"
-hyper = { version = "1.8.1", features = ["client", "http1"] }
-hyper-rustls = "0.27.7"
-hyper-util = "0.1.20"
-libunftp = { version = "0.22.0", path = "../../", default-features = false }
+async-trait.workspace = true
+base64.workspace = true
+bytes.workspace = true
+chrono = { workspace = true, features = ["std", "serde"] }
+futures.workspace = true
+http-body-util.workspace = true
+hyper.workspace = true
+hyper-rustls.workspace = true
+hyper-util.workspace = true
+libunftp.workspace = true
 mime = "0.3.17"
-percent-encoding = "2.3.2"
-serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.149"
+percent-encoding.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 time = "0.3.47"
-tokio = { version = "1.49.0", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
-tokio-stream = "0.1.18"
-tokio-util = { version = "0.7.18", features = ["codec", "compat"] }
-tracing = { version = "0.1.44", default-features = false }
-tracing-attributes = "0.1.31"
+tokio = { workspace = true, features = ["rt", "net", "sync", "io-util", "time", "fs"] }
+tokio-stream.workspace = true
+tokio-util = { workspace = true, features = ["codec", "compat"] }
+tracing.workspace = true
+tracing-attributes.workspace = true
 yup-oauth2 = { version = "12.1.2", default-features = false, features = ["hyper-rustls", "service-account", "aws-lc-rs"] }
 
 [dev-dependencies]
 async_ftp = "6.0.0"
 clap = { version = "4.5.57", features = ["env"] }
-lazy_static = "1.5.0"
+lazy_static.workspace = true
 more-asserts = "0.3.1"
 path_abs = "0.5.1"
 pretty_assertions = "1.4.1"
@@ -53,5 +53,5 @@ slog-async = "2.8.0"
 slog-stdlog = "4.1.1"
 slog-term = "2.9.2"
 tempfile = "3.24.0"
-tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = "0.3.22"
