--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ hyper = { version = "1.8.1", features = ["client", "http1"] }
 hyper-rustls = "0.27.7"
 hyper-util = "0.1.20"
 lazy_static = "1.5.0"
-libunftp = { version = "0.23.0", path = ".", default-features = false }
+libunftp = { version = "0.23.0", path = "." }
 unftp-core = { version = "0.1.0", path = "crates/unftp-core" }
 percent-encoding = "2.3.2"
 serde = { version = "1.0.228", features = ["derive"] }
