--- a/crates/unftp-auth-jsonfile/Cargo.toml
+++ b/crates/unftp-auth-jsonfile/Cargo.toml
@@ -27,7 +27,7 @@ unftp-core.workspace = true
 ring = "0.17.14"
 serde.workspace = true
 serde_json.workspace = true
-tokio = { workspace = true, features = ["rt", "time"] }
+tokio = { workspace = true, features = ["macros", "rt", "time"] }
 tracing.workspace = true
 tracing-attributes.workspace = true
 valid = "0.3.1"
@@ -36,7 +36,7 @@ flate2 = "1.1.9"
 [dev-dependencies]
 libunftp.workspace = true
 pretty_env_logger = "0.5.0"
-tokio = { workspace = true, features = ["macros"] }
+tokio = { workspace = true, features = ["macros", "rt"] }
 unftp-sbe-fs = { version = "0.4.0", path = "../unftp-sbe-fs" }
 
 [lints]
